--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -11,4 +11,5 @@
     <string name="release_label">TERBIT :</string>
     <string name="rating_label">NILAI :</string>
     <string name="duration_label">WAKTU PENAYANGAN :</string>
+    <string name="change_language_label">Ubah Bahasa</string>
 </resources>
